--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "author": "Florian Margaine <florian@margaine.com>",
     "dependencies": {
-        "ncore": "2.2.3"
+        "ncore": "2.2.3",
+        "express": "2.5.11"
     }
 }
