--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
     "name": "tartempion",
     "version": "0.0.1",
+    "description": "The web framework for people who like to eat some pie.",
     "author": "Florian Margaine <florian@margaine.com>",
     "dependencies": {
-        "ncore": "2.2.3",
-        "express": "2.5.11",
-        "ejs": "0.7.2"
-    }
+        "ncore": "2.2.x",
+        "express": "2.5.x"
+    },
+    "devDependencies": {
+        "mocha": "1.3.x"
+    },
+    "main": "./lib/core.js"
 }
