--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
     "name": "tartempion",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "The web framework for people who like to eat some pie.",
-    "author": "Florian Margaine <florian@margaine.com>",
+    "author": {
+        "name": "Florian Margaine",
+        "email": "florian@margaine.com",
+        "url": "http://margaine.com"
+    },
+    "keywords": [
+        "framework",
+        "web"
+    ],
     "dependencies": {
         "ncore": "2.2.x",
         "express": "2.5.x"
@@ -10,5 +18,12 @@
     "devDependencies": {
         "mocha": "1.3.x"
     },
-    "main": "./lib/core.js"
+    "main": "./lib/core.js",
+    "bugs": {
+        "url": "https://github.com/Ralt/tartempion/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Ralt/tartempion"
+    }
 }
