--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     ],
     "dependencies": {
         "ncore": "2.2.x",
-        "express": "2.5.x"
+        "express": "2.5.x",
+        "commander": "1.0.x"
     },
     "devDependencies": {
         "mocha": "1.3.x"
