--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dependencies": {
         "ncore": "2.2.x",
         "express": "2.5.x",
-        "commander": "1.0.x"
+        "commander": "1.0.x",
+        "wrench": "1.3.x"
     },
     "devDependencies": {
         "mocha": "1.3.x"
