--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     ],
     "dependencies": {
         "ncore": "2.2.x",
-        "express": "2.5.x",
+        "express": "3.0.x",
         "commander": "1.0.x",
         "wrench": "1.3.x"
     },
@@ -28,5 +28,9 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/Ralt/tartempion"
-    }
+    },
+    "engines": [
+    {
+        "node": ">= 0.8.x"
+    }]
 }
