--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "web"
     ],
     "dependencies": {
-        "ncore": "2.2.x",
+        "ncore": "2.2.2",
         "express": "3.0.x",
         "commander": "1.0.x",
         "wrench": "1.3.x"
